[package]
name = "git-lead-time"
version = "0.1.0"
authors = ["Graeme Coupar <grambo@grambo.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
console = "0.14.0"
cynic = { git = "https://github.com/obmarg/cynic.git", features = ["reqwest-blocking", "chrono"] }
chrono = "0.4.19"
indicatif = "0.15"
reqwest = { version = "0.11.0", features = ["blocking"] }
structopt = "0.3.21"

queries = { path = "queries" }
