[package]
name = "queries"
version = "0.1.0"
authors = ["Graeme Coupar <grambo@grambo.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cynic = { version = "0.11", features = ["chrono"] }
cynic = { path = "/Users/graeme/src/cynic/cynic", features = ["chrono"] }
chrono = "0.4.19"